# openepaperlink-rust-sdk

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
docs/: openepaper-ap-web-protocol.md
docs/adr/: 0001-record-architecture-decisions.md  0002-single-crate-structure.md  0003-tokio-async-runtime.md  0004-reqwest-http-client.md  0005-tokio-tungstenite-websocket.md  0006-serde-json-serialization.md  0007-thiserror-error-handling.md  0008-module-structure.md  0009-client-builder-pattern.md  0010-typed-websocket-message-stream.md  0011-feature-gated-image-decoding.md  0012-mac-newtype.md  0013-semantic-sentinel-types.md  0014-unknown-variant-handling.md  0015-websocket-no-auto-reconnect.md  0016-reboot-endpoint-semantics.md  0017-auto-paginate-get-tags.md  0018-disable-tls-dependencies.md  0019-write-endpoint-error-policy.md  0020-tag-command-enum.md  0021-tls-secure-compile-gate.md
examples/: README.md  get_config.rs  led_blink.rs  list_tags.rs  upload_image.rs  ws_monitor.rs
examples/video_wall/: dither.rs  encode.rs  layout.rs  main.rs  palette.rs
src/: client.rs  config.rs  content.rs  error.rs  led.rs  lib.rs  system.rs  tags.rs  tagtypes.rs  variables.rs  ws.rs
src/types/: ap_item.rs  config.rs  content.rs  led.rs  mac.rs  mod.rs  serde_helpers.rs  system.rs  tag.rs  tag_type.rs  ws_message.rs
todos/: 01ksz4qk8wyf6fgmde872qrmz0-clean-room-g5-decoder.md  01kszby0dr307hebas8h36978a-pagination-upper-bound.md  01kszby0dr307hebas8h36978b-apconfig-serialize-roundtrip.md  01kszby0dr307hebas8h36978c-typed-rotate-lut-invert.md  01kszby0dr307hebas8h36978d-document-rustls-crypto-provider.md  01kszckm93r1c5c9b9b3jv2yvg-capability-flags-bool-consistency.md  01kszckm93r1c5c9b9b3jv2yvh-fused-stream-event-stream.md
