[package]
name = "openepaperlink-sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust SDK for communicating with OpenEPaperLink access points"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "form"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake"] }
tokio = { version = "1", features = ["net", "time", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
rustls = ["reqwest/rustls", "tokio-tungstenite/rustls-tls-native-roots"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
image-decode = []
